---
source: src/petal/lexer.rs
expression: "lex(\"\\\"hello world\\\" \\\"123 -+() . '\\\"\".to_string())"
---
[
    Token {
        token_type: String,
        lexeme: "\"hello world\"",
        literal: Some(
            String(
                "hello world",
            ),
        ),
        span: Span {
            start: Pos(
                0,
            ),
            end: Some(
                Pos(
                    12,
                ),
            ),
        },
    },
    Token {
        token_type: String,
        lexeme: "\"123 -+() . '\"",
        literal: Some(
            String(
                "123 -+() . '",
            ),
        ),
        span: Span {
            start: Pos(
                14,
            ),
            end: Some(
                Pos(
                    27,
                ),
            ),
        },
    },
]
